fix mode spacing in waybar

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -41,6 +41,7 @@
 
 #mode {
   background-color: @soml_red;
+  padding: 2px 16px;
 }
 
 #waybar:not(.empty) #window {
